--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "commander": "^2.19.0",
     "inquirer": "^6.2.0",
-    "opn": "^5.4.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
+    "opn": "^5.4.0",
+    "sequelize": "^4.39.1"
   }
 }
